--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,10 +1,12 @@
 name: Terraform Cluster Workflow
 
 on:
-  [pull_request, push]:
+  pull_request:
     branches:
       - main
-
+  push:
+    branches:
+      - main
 jobs:
   terraform:
     runs-on: ubuntu-latest
